[gd_scene load_steps=8 format=3 uid="uid://b8qvxj3yvwxqy"]

[ext_resource type="Script" path="res://scripts/core/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/core/view_manager.gd" id="2_view_manager"]
[ext_resource type="Script" path="res://scripts/core/simulation_state.gd" id="3_simulation_state"]
[ext_resource type="Script" path="res://scripts/core/input_system.gd" id="4_input_system"]
[ext_resource type="Script" path="res://scripts/core/audio_system.gd" id="5_audio_system"]
[ext_resource type="Script" path="res://scripts/views/tactical_map_view.gd" id="6_tactical_map_view"]
[ext_resource type="Script" path="res://scripts/views/periscope_view.gd" id="7_periscope_view"]

[node name="Main" type="Node"]
script = ExtResource("1_main")

[node name="ViewManager" type="Node" parent="."]
script = ExtResource("2_view_manager")

[node name="SimulationState" type="Node" parent="."]
script = ExtResource("3_simulation_state")

[node name="InputSystem" type="Node" parent="."]
script = ExtResource("4_input_system")

[node name="AudioSystem" type="Node" parent="."]
script = ExtResource("5_audio_system")

[node name="TacticalMapView" type="CanvasLayer" parent="."]
script = ExtResource("6_tactical_map_view")

[node name="Camera2D" type="Camera2D" parent="TacticalMapView"]
enabled = true
anchor_mode = 0
zoom = Vector2(0.5, 0.5)

[node name="PeriscopeView" type="Node3D" parent="."]
visible = false
script = ExtResource("7_periscope_view")

[node name="Camera3D" type="Camera3D" parent="PeriscopeView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
current = false
fov = 60.0

[node name="Label3D" type="Label3D" parent="PeriscopeView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, -50)
pixel_size = 0.1
text = "PERISCOPE VIEW
Press 1, 2, 3 to switch views"
font_size = 32

[node name="Ocean" type="CSGBox3D" parent="PeriscopeView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
size = Vector3(1000, 1, 1000)

[node name="ExternalView" type="Node3D" parent="."]
visible = false

[node name="Camera3D" type="Camera3D" parent="ExternalView"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 50, 100)
current = false
fov = 75.0

[node name="Label3D" type="Label3D" parent="ExternalView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 60, 0)
pixel_size = 0.1
text = "EXTERNAL VIEW
Press 1, 2, 3 to switch views"
font_size = 32

[node name="SubmarineModel" type="CSGBox3D" parent="ExternalView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
size = Vector3(5, 3, 20)

[node name="Ocean" type="CSGBox3D" parent="ExternalView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
size = Vector3(1000, 1, 1000)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 50, 0)
light_energy = 1.5
